<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.randomshot.projectilemotionsolver.acceleration"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Acceleration"
        android:id="@+id/textView3"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
    <EditText
        android:inputType="numberSigned|numberDecimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/displacementInputforAcc"
        android:width="150dp"
        android:hint="@string/verticalDisHint"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:textAlignment="center"
        android:gravity="center" />
    <EditText
        android:inputType="numberSigned|numberDecimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/verViInputForAcc"
        android:width="150dp"
        android:hint="@string/verticalVelocityHint"
        android:layout_below="@+id/displacementInputforAcc"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:textAlignment="center"
        android:gravity="center" />
    <EditText
        android:inputType="numberSigned|numberDecimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/verVfInputforAcc"
        android:width="150dp"
        android:hint="@string/verticalFinalVelocityHint"
        android:layout_below="@+id/verViInputForAcc"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:textAlignment="center"
        android:gravity="center" />
    <EditText
        android:inputType="numberSigned|numberDecimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/timeInputforAcc"
        android:width="150dp"
        android:hint="@string/timeHint"
        android:layout_below="@+id/verVfInputforAcc"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:textAlignment="center"
        android:gravity="center" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Find Acc"
        android:id="@+id/bsolveforAcc"
        android:layout_marginTop="41dp"
        android:layout_below="@+id/timeInputforAcc"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/mustHave3FilledSpaces"
        android:id="@+id/findAcceleration"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="39dp" />

</RelativeLayout>
