<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.randomshot.projectilemotionsolver.verticalVeloctyFinal"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Vertical Velocity Final"
        android:id="@+id/textView3"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
    <EditText
        android:inputType="numberSigned|numberDecimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/accInputForVf"
        android:width="150dp"
        android:hint="@string/accHint"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:textAlignment="center"
        android:gravity="center" />
    <EditText
        android:inputType="numberSigned|numberDecimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/displacementInputforVf"
        android:width="150dp"
        android:hint="@string/verticalDisHint"
        android:layout_below="@+id/accInputForVf"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:textAlignment="center"
        android:gravity="center" />
    <EditText
        android:inputType="numberSigned|numberDecimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/verViInputforVf"
        android:width="150dp"
        android:hint="@string/verticalVelocityHint"
        android:layout_below="@+id/displacementInputforVf"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:textAlignment="center"
        android:gravity="center" />
    <EditText
        android:inputType="numberSigned|numberDecimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/timeInputforVf"
        android:width="150dp"
        android:hint="@string/timeHint"
        android:layout_below="@+id/verViInputforVf"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:textAlignment="center"
        android:gravity="center" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Find Vf"
        android:id="@+id/bsolveForVeloctyFinal"
        android:layout_marginTop="41dp"
        android:layout_below="@+id/timeInputforVf"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/mustHave3FilledSpaces"
        android:id="@+id/findVerticalVelocityFinal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="39dp" />

</RelativeLayout>