<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.randomshot.projectilemotionsolver.verticalVelocityInitial"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Vertical Velocity Initial"
        android:id="@+id/textView3"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
    <EditText
        android:inputType="numberSigned|numberDecimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/accInputforVi"
        android:width="150dp"
        android:hint="@string/accHint"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:textAlignment="center"
        android:gravity="center" />
    <EditText
        android:inputType="numberSigned|numberDecimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/displacementInputforVi"
        android:width="150dp"
        android:hint="@string/verticalDisHint"
        android:layout_below="@+id/accInputforVi"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:textAlignment="center"
        android:gravity="center" />
    <EditText
        android:inputType="numberSigned|numberDecimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/verVfInputforVi"
        android:width="150dp"
        android:hint="@string/verticalFinalVelocityHint"
        android:layout_below="@+id/displacementInputforVi"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:textAlignment="center"
        android:gravity="center" />
    <EditText
        android:inputType="numberSigned|numberDecimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/timeInputfoVi"
        android:width="150dp"
        android:hint="@string/timeHint"
        android:layout_below="@+id/verVfInputforVi"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:textAlignment="center"
        android:gravity="center" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Find Vi"
        android:id="@+id/bsolveForVeloctyInitial"
        android:layout_marginTop="41dp"
        android:layout_below="@+id/timeInputfoVi"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/mustHave3FilledSpaces"
        android:id="@+id/findVerticalVelocityInitial"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="39dp" />

</RelativeLayout>
